Add the multilingal nissing keys

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -219,7 +219,8 @@
     "statusLabel": "الحالة",
     "locationLabel": "عن بُعد / باريس",
     "locationDescription": "متاح عبر توقيت أوروبا وأمريكا.",
-    "ctaSchedule": "حدد مكالمة"
+    "ctaSchedule": "حدد مكالمة",
+    "emailAddress": "hello@example.com"
   },
   "languages": {
     "en": "English",
@@ -280,5 +281,448 @@
       }
     },
     "viewButton": "عرض"
+  },
+  "home2": {
+    "terminal": {
+      "windowTitle": "bash - dev_env",
+      "portLabel": "المنفذ: 3000",
+      "status": "متصل",
+      "script": [
+        {
+          "text": "جاري تهيئة النظام...",
+          "color": "text-slate-500"
+        },
+        {
+          "text": "تحميل الوحدات: [React, Node, Design]...",
+          "color": "text-slate-400"
+        },
+        {
+          "text": ">> تم منح الوصول.",
+          "color": "text-emerald-500"
+        },
+        {
+          "text": "",
+          "color": "text-transparent"
+        },
+        {
+          "text": "مرحباً بالعالم، أنا",
+          "color": "text-slate-200"
+        },
+        {
+          "text": "YOUNES",
+          "color": "text-emerald-400 font-bold text-lg tracking-wider"
+        },
+        {
+          "text": "مطور فل ستاك ومهندس واجهات",
+          "color": "text-blue-400"
+        },
+        {
+          "text": "",
+          "color": "text-transparent"
+        },
+        {
+          "text": "الوضع الحالي:",
+          "color": "text-slate-400"
+        },
+        {
+          "text": "-> أبني تجارب رقمية في المغرب.",
+          "color": "text-amber-300"
+        },
+        {
+          "text": "-> جاهز لتحديات جديدة.",
+          "color": "text-emerald-300"
+        }
+      ]
+    },
+    "glitchFallback": "مطور إبداعي"
+  },
+  "projectsPage": {
+    "projectLabel": "المشروع",
+    "systemArchitecture": "معمارية النظام",
+    "visitCta": "زيارة الموقع",
+    "interact": "تفاعل",
+    "lock": "قفل",
+    "imageLabel": "صورة",
+    "interactHint": "انقر \"تفاعل\" لاستخدام الموقع",
+    "imageMissing": "لا توجد صورة متاحة",
+    "externalPreview": "معاينة خارجية فقط",
+    "items": [
+      {
+        "id": "ksar-data",
+        "title": "Ksar-Data",
+        "subtitle": "منصة بيانات مفتوحة",
+        "url": "https://www.ksardata.com",
+        "date": "2024",
+        "embeddable": true,
+        "image": "/public/ksardata-screen.png",
+        "stack": [
+          "React",
+          "ShadCN",
+          "Tailwind",
+          "Vercel"
+        ],
+        "desc": "مبادرة تقنيات مدنية تعزز الشفافية في القصر الكبير عبر عرض الميزانيات البلدية وبيانات الإحصاء.",
+        "color": "from-emerald-500 to-teal-900",
+        "accent": "text-emerald-400",
+        "border": "border-emerald-500/50",
+        "shadow": "shadow-emerald-500/20"
+      },
+      {
+        "id": "tarik-school",
+        "title": "Tarik Ibn Ziyad",
+        "subtitle": "بوابة مدرسية",
+        "url": "https://www.tarikibnziyad.com",
+        "date": "2023",
+        "embeddable": true,
+        "image": "",
+        "stack": [
+          "HTML5",
+          "CSS3",
+          "JavaScript",
+          "Static"
+        ],
+        "desc": "تحول رقمي لمؤسسة عريقة. منصة خفيفة ثنائية اللغة تربط الآباء بالطلاب.",
+        "color": "from-blue-600 to-indigo-900",
+        "accent": "text-blue-400",
+        "border": "border-blue-500/50",
+        "shadow": "shadow-blue-500/20"
+      },
+      {
+        "id": "walid-portfolio",
+        "title": "Walid Mouhan",
+        "subtitle": "ملف أكاديمي",
+        "url": "https://www.walidmouhan.com",
+        "date": "2023",
+        "embeddable": false,
+        "image": "/walid-screen.png",
+        "stack": [
+          "Django",
+          "Python",
+          "Tailwind",
+          "Render"
+        ],
+        "desc": "ملف أكاديمي بسيط لباحث دكتوراه، يركز على تنظيم المحتوى وأرشفة المنشورات.",
+        "color": "from-amber-500 to-orange-900",
+        "accent": "text-amber-400",
+        "border": "border-amber-500/50",
+        "shadow": "shadow-amber-500/20"
+      }
+    ]
+  },
+  "experiencePage": {
+    "badge": "سجل النظام",
+    "title": {
+      "primary": "مسار",
+      "accent": "مهني"
+    },
+    "subtitle": "// EXECUTION_HISTORY: تتبع الرحلة من طالب إلى مؤسس.",
+    "timeline": [
+      {
+        "id": "opicom",
+        "role": "المؤسس والمهندس الرئيسي",
+        "company": "OPICOM Tech",
+        "period": "جارٍ",
+        "desc": "القاعدة لاستوديو المستقبل: أجمع التقنية والتصميم والشفافية لخدمة الأعمال المحلية.",
+        "tags": [
+          "رؤية",
+          "قيادة",
+          "بحث وتطوير",
+          "تقنية مدنية"
+        ],
+        "icon": "BrainCircuit",
+        "color": "emerald"
+      },
+      {
+        "id": "freelance",
+        "role": "مطور فل ستاك",
+        "company": "Freelance / مستقل",
+        "period": "3-4 سنوات",
+        "desc": "مشاريع فعلية لمدارس وباحثين. أشرف على الفكرة → التصميم → التطوير → الإطلاق.",
+        "tags": [
+          "فل ستاك",
+          "علاقات العملاء",
+          "إطلاق",
+          "تصميم الأنظمة"
+        ],
+        "icon": "Cpu",
+        "color": "amber"
+      },
+      {
+        "id": "instructor",
+        "role": "مدرب تقني",
+        "company": "مدارس متعددة",
+        "period": "دوام جزئي",
+        "desc": "أدرّس أساسيات الحاسوب والفوتوشوب والأدوات الرقمية، مما صقل قدرتي على الشرح والبرمجة.",
+        "tags": [
+          "إرشاد",
+          "تواصل",
+          "ثقافة رقمية",
+          "أدوات التصميم"
+        ],
+        "icon": "Network",
+        "color": "blue"
+      },
+      {
+        "id": "education",
+        "role": "إجازة علوم الحاسوب + تعلم ذاتي",
+        "company": "الجامعة و CS50",
+        "period": "البداية",
+        "desc": "بداية من CS50 هارفارد ولم أتوقف. ليالٍ طويلة للتوثيق وتصحيح الأخطاء وبناء حلول حديثة.",
+        "tags": [
+          "علوم الحاسوب",
+          "تعلم ذاتي",
+          "بحث",
+          "خوارزميات"
+        ],
+        "icon": "GraduationCap",
+        "color": "rose"
+      }
+    ],
+    "achievements": [
+      {
+        "label": "مشاريع من الواقع",
+        "value": "10+",
+        "icon": "Server"
+      },
+      {
+        "label": "أول منصة بيانات مفتوحة (القصر)",
+        "value": "تم الإطلاق",
+        "icon": "Database"
+      },
+      {
+        "label": "إتقان الأدوات",
+        "value": "عالٍ",
+        "icon": "Code2"
+      },
+      {
+        "label": "تدفق عمل مدعوم بالذكاء الاصطناعي",
+        "value": "نشط",
+        "icon": "Zap"
+      }
+    ],
+    "achievementsTitle": "معايير النظام",
+    "achievementsSubtitle": "تحليل الأداء وأبرز النتائج",
+    "achievementsFooter": {
+      "id": "المعرف: YOUNES-DEV-001",
+      "status": "الحالة: جاهز للعمل"
+    }
+  },
+  "aboutPage2": {
+    "backend": {
+      "sidebar": {
+        "systemLabel": "SYSTEM_ROOT",
+        "cpuLabel": "CPU",
+        "cpuValue": "12%",
+        "ramLabel": "RAM",
+        "ramValue": "424MB",
+        "processesLabel": "العمليات:",
+        "processes": [
+          {
+            "name": "node_server",
+            "pid": "PID: 402",
+            "active": true
+          },
+          {
+            "name": "docker_daemon",
+            "pid": "PID: 119",
+            "active": false
+          },
+          {
+            "name": "postgres_worker",
+            "pid": "PID: 882",
+            "active": false
+          }
+        ],
+        "uptime": "مدة التشغيل: 14ي 2س 12د"
+      },
+      "terminal": {
+        "status": "SSH: متصل",
+        "banner": "Younes Interactive Shell v2.0.4",
+        "connectedMessage": "تم الاتصال بالخادم البعيد.",
+        "helpHint": "اكتب \"help\" لعرض الأوامر.",
+        "clearMessage": "تم مسح الطرفية.",
+        "prompt": "guest@portfolio:~$",
+        "error": "الأمر غير معروف: {{command}}. جرّب \"help\"."
+      }
+    },
+    "frontend": {
+      "title": "عملية بناء الواجهة",
+      "subtitle": "حرّك المؤشر لمقارنة المخطط بالنسخة النهائية.",
+      "devices": {
+        "desktop": "سطح المكتب",
+        "mobile": "الهاتف"
+      },
+      "labels": {
+        "rendered": "النتيجة",
+        "blueprint": "المخطط"
+      }
+    },
+    "designer": {
+      "visualEngineLabel": "المحرك البصري",
+      "logoLabTitle": "مختبر الشعار",
+      "logoLabDescription": "تفاعل مع هوية العلامة في فضاء ثلاثي الأبعاد.",
+      "explosionFactor": "معدل التفكيك",
+      "neonBloom": "توهج نيوني",
+      "renderModes": "أنماط الإظهار",
+      "interactivePreview": "معاينة تفاعلية"
+    }
+  },
+  "terminalData": {
+    "commands": {
+      "help": {
+        "description": "عرض الأوامر المتاحة",
+        "output": [
+          "الأوامر المتاحة:",
+          "  about       - من هو يونس؟",
+          "  stacks      - ترسانة التقنية",
+          "  projects    - أهم المشاريع",
+          "  experience  - خط زمني للمسار",
+          "  contact     - قنوات التواصل",
+          "  setup       - العتاد وإعدادات البرمجيات",
+          "  ls          - سرد الملفات",
+          "  clear       - مسح الطرفية"
+        ]
+      },
+      "?": {
+        "description": "مرادف للأمر help",
+        "output": [
+          "اكتب \"help\" لرؤية الأوامر."
+        ]
+      },
+      "clear": {
+        "description": "يمسح الطرفية",
+        "output": []
+      },
+      "about": {
+        "description": "عرض نبذة مختصرة",
+        "output": [
+          ">> تم التحقق من الهوية",
+          "Younes El Bettate",
+          "-----------------",
+          "مطور فل ستاك عصامي ومؤسس OPICOM Tech.",
+          "مقيم في المغرب 🇲🇦",
+          "التركيز: بناء منتجات رقمية هادفة، أدوات للشفافية، وأنظمة للمدارس."
+        ]
+      },
+      "full_name": {
+        "description": "إظهار الاسم الكامل",
+        "output": [
+          "Younes El Bettate"
+        ]
+      },
+      "skills": {
+        "description": "عرض المهارات الرئيسية",
+        "output": [
+          ">> جاري تحميل مصفوفة المهارات...",
+          "- المعمارية: تصميم واجهات برمجة، مايكروخدمات، MVC",
+          "- تجربة المستخدم: تصميم حركي، نمذجة سريعة، أنظمة تصميم",
+          "- الإستراتيجية: إدارة منتجات، Agile/Scrum"
+        ]
+      },
+      "stacks": {
+        "description": "عرض أهم التقنيات",
+        "output": [
+          ">> تحليل الشيفرة...",
+          "[BACKEND]   Python (Django, FastAPI), PostgreSQL, Redis, Docker",
+          "[FRONTEND]  React, TypeScript, TailwindCSS, Framer Motion",
+          "[MOBILE]    React Native, Expo",
+          "[DESKTOP]   Tauri, Electron"
+        ]
+      },
+      "projects": {
+        "description": "عرض المشاريع المميزة",
+        "output": [
+          "1. Ksar-Data ....... [لوحة بيانات مدنية]",
+          "2. OPICOM Studio ... [ملف الوكالة]",
+          "3. Restaurant OS ... [نظام نقاط بيع]",
+          "4. School MS ....... [منصة تعليمية]",
+          "",
+          "اكتب \"open <اسم_المشروع>\" (قريباً) للاطلاع على التفاصيل."
+        ]
+      },
+      "experience": {
+        "description": "ملخص الخبرة",
+        "output": [
+          ">> تم استدعاء الخط الزمني",
+          "[202X - الآن] مؤسس @ OPICOM Tech",
+          "[202X - 202X] مطور فل ستاك مستقل",
+          "-----------------",
+          "أكثر من 4 سنوات في بناء حلول متكاملة للمدارس والتقنيات المدنية والعملاء المستقلين."
+        ]
+      },
+      "contact": {
+        "description": "طرق التواصل",
+        "output": [
+          ">> فتح القنوات...",
+          "Email:    bt.younesse@gmail.com",
+          "GitHub:   github.com/Younes-bt",
+          "LinkedIn: /in/unesbt42"
+        ]
+      },
+      "ls": {
+        "description": "عرض الملفات",
+        "output": [
+          "drwxr-xr-x  younes  projects/",
+          "drwxr-xr-x  younes  skills/",
+          "drwxr-xr-x  younes  config/",
+          "-rw-r--r--  younes  resume.pdf",
+          "-rw-r--r--  younes  secret_plans.txt"
+        ]
+      },
+      "pwd": {
+        "description": "إظهار المجلد الحالي",
+        "output": [
+          "/home/guest/portfolio"
+        ]
+      },
+      "whoami": {
+        "description": "المستخدم الحالي",
+        "output": [
+          "guest@younes.dev (مستوى الوصول: زائر)"
+        ]
+      },
+      "date": {
+        "description": "عرض التاريخ",
+        "output": [
+          "{date}"
+        ]
+      },
+      "setup": {
+        "description": "بيئة التطوير",
+        "output": [
+          ">> جاري جلب المواصفات",
+          "- المحرر: VS Code (One Dark Pro)",
+          "- الخط: Geist Mono / JetBrains Mono",
+          "- الطرفية: Zsh + Oh My Zsh + Starship",
+          "- المتصفح: Arc / Chrome Dev"
+        ]
+      },
+      "sudo": {
+        "description": "أمر الصلاحيات العليا",
+        "output": [
+          "تعجبني طريقتك في التفكير! سيتم تسجيل هذا الحدث.",
+          "(محاولة جيدة.)"
+        ]
+      },
+      "cat": {
+        "description": "قراءة ملف",
+        "output": [
+          "الاستخدام: cat <اسم_الملف> (الصلاحيات محدودة للزوار)"
+        ]
+      },
+      "coffee": {
+        "description": "تحضير قهوة",
+        "output": [
+          "؟ جاري التحضير...",
+          "خطأ 418: أنا إبريق شاي."
+        ]
+      },
+      "exit": {
+        "description": "إغلاق الطرفية",
+        "output": [
+          "لا يمكنك المغادرة. عليك توظيفي أولاً."
+        ]
+      }
+    }
   }
 }
